# interactive-portfolio

./: .gitignore  AGENTS.md  ASSET_CREDITS.md  CMakeLists.txt  LICENSE  README.md
docs/: DESIGN.md
src/: AssetStore.cpp  AssetStore.hpp  DemoMap.hpp  DirectionInput.cpp  DirectionInput.hpp  Game.cpp  Game.hpp  GameMap.cpp  GameMap.hpp  GameObject.cpp  GameObject.hpp  Grid.hpp  HubMap.hpp  Sprite.cpp  Sprite.hpp  main.cpp
src/ui/: KeyboardMenu.cpp  KeyboardMenu.hpp  TextMessage.cpp  TextMessage.hpp
tools/: gen_assets.cpp
web/: shell.html
